Make java 8 compat