@@ -26,12 +26,12 @@
                  [com.fasterxml.jackson.core/jackson-core "2.9.5"]
                  [com.spotify/docker-client "8.11.2"]
                  [failjure "1.3.0"]
+                 [javax.xml.bind/jaxb-api "2.3.0"]          ;; For Aleph's XML dependency, Java 8 compat
                  [io.netty/netty-all "4.1.24.Final"]        ;; Forced Netty version for Java 9+ compat
                  [javax.activation/activation "1.1.1"]      ;; Java 9+ compat for XML bindings
                  [org.slf4j/slf4j-simple "1.7.25"]]         ;; Using simple slf4j logger and silence warnings
   :plugins [[lein-ancient "0.6.15"]]
   :java-source-paths ["src/bob/java"]
-  :jvm-opts ["--add-modules" "java.xml.bind"]
   :global-vars {*warn-on-reflection* true}
   :main bob.main
   :target-path "target/%s"
